force-app/main/default/objects/UAT__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <description>Breve descripción del UAT</description>
    <label>Asunto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>