force-app/main/default/objects/UAT__c/fields/Avance__c.field-meta.xml
<CustomField>
    <fullName>Avance__c</fullName>
    <formula>If(OR(TEXT(Estado__c)==&apos;OK&apos;,TEXT(Estado__c)==&apos;No Aplica&apos;),1,
IF(TEXT(Estado__c)==&apos;Nueva&apos;,0.1,0.75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>