force-app/main/default/objects/UAT__c/fields/BloqueFuncionalUATs__c.field-meta.xml
<CustomField>
    <fullName>BloqueFuncionalUATs__c</fullName>
    <label>Bloque Funcional UATs</label>
    <referenceTo>BloqueFuncionalUATs__c</referenceTo>
    <relationshipLabel>UATs</relationshipLabel>
    <relationshipName>UATs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>