force-app/main/default/objects/UAT__c/fields/ClaveUAT__c.field-meta.xml
<CustomField>
    <fullName>ClaveUAT__c</fullName>
    <label>Clave UAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>