force-app/main/default/objects/UAT__c/fields/ClaveUATDependiente__c.field-meta.xml
<CustomField>
    <fullName>ClaveUATDependiente__c</fullName>
    <description>Este campo sirve para caragar la clave de la UAT dependiente y mediante un flow se rellenará el campo de Clave UAT Principal</description>
    <label>Clave UAT Dependiente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>