force-app/main/default/objects/UAT__c/fields/DependenciaDeOtrasUATs__c.field-meta.xml
<CustomField>
    <fullName>DependenciaDeOtrasUATs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependencia de otras UATs</label>
    <type>Checkbox</type>
</CustomField>