force-app/main/default/objects/UAT__c/fields/PesoUAT__c.field-meta.xml
<CustomField>
    <fullName>PesoUAT__c</fullName>
    <formula>BloqueFuncionalUATs__r.PesoUATIndividual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso de la UAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>