force-app/main/default/objects/UAT__c/fields/PreCondicionesTecnicas__c.field-meta.xml
<CustomField>
    <fullName>PreCondicionesTecnicas__c</fullName>
    <inlineHelpText>Requisitos técnicos y servicios involucrados necesarios previos a la prueba</inlineHelpText>
    <label>Pre Condiciones Técnicas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>