force-app/main/default/objects/UAT__c/fields/ReferenciaAdopcion__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaAdopcion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se selecciona si la UAT sirve de referencia para la Adopción.</description>
    <label>Referencia Adopción</label>
    <type>Checkbox</type>
</CustomField>