force-app/main/default/objects/UAT__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Fecha estimada de entrega</description>
    <label>Fecha de entrega planificada</label>
    <type>Date</type>
</CustomField>