force-app/main/default/objects/UAT__c/fields/SubcategoriaFuncional__c.field-meta.xml
<CustomField>
    <fullName>SubcategoriaFuncional__c</fullName>
    <description>Subnivel de clasificación</description>
    <label>Subcategoría Funcional</label>
    <length>250</length>
    <type>Text</type>
</CustomField>