force-app/main/default/objects/UAT__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Versión</description>
    <label>Version</label>
    <length>200</length>
    <type>Text</type>
</CustomField>