force-app/main/default/objects/UAT__c/listViews/UATsDisponibleCliente.listView-meta.xml
<ListView>
    <fullName>UATsDisponibleCliente</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>UATPrincipal__c</columns>
    <columns>Asunto__c</columns>
    <columns>CategoriaFuncional__c</columns>
    <columns>SubcategoriaFuncional__c</columns>
    <columns>PerfilUsuarioPruebas__c</columns>
    <columns>UsuarioDePrueba__c</columns>
    <columns>Avance__c</columns>
    <columns>BloqueFuncionalUATs__c</columns>
    <columns>PruebaEjecutadaPor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Disponible Cliente,Dependiente</value>
    </filters>
    <label>UATs Disponible Cliente y Dependientes</label>
</ListView>