force-app/main/default/objects/UAT__c/listViews/UATsEstadoOK.listView-meta.xml
<ListView>
    <fullName>UATsEstadoOK</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Asunto__c</columns>
    <columns>CategoriaFuncional__c</columns>
    <columns>SubcategoriaFuncional__c</columns>
    <columns>PerfilUsuarioPruebas__c</columns>
    <columns>UsuarioDePrueba__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>OK</value>
    </filters>
    <label>UATs Estado OK</label>
</ListView>